--- a/contact.html
+++ b/contact.html
@@ -16,16 +16,16 @@
 
 
 
-<!-- Page Header -->
+
 <section class="page-header contact-hero">
     <h1>CONTACT US</h1>
     <p>Get in touch with us to learn more about Ghana</p>
 </section>
 
-<!-- Contact Section -->
+
 <section class="contact-container">
 
-    <!-- Contact Info -->
+    
     <div class="contact-info">
         <h2>Get In Touch</h2>
         <p>Have questions or need more information?  
@@ -36,16 +36,32 @@
         <p><strong>📧 Email:</strong> <a href="mailto:akuduleclems@gmail.com">akuduleclems@gmail.com </a></p> 
     </div>
 
-    <!-- Contact Form -->
-    <form class="contact-form">
-        <h2>Send a Message</h2>
+    
+    <div class="contact-form">
+    <h2>Send Us a Message</h2>
 
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea rows="5" placeholder="Your Message" required></textarea>
+    <form id="contactForm">
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" placeholder="Enter your full name">
+        <small class="error"></small>
+      </div>
 
-        <button type="submit">Send Message</button>
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" placeholder="Enter your email">
+        <small class="error"></small>
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" rows="5" placeholder="Type your message"></textarea>
+        <small class="error"></small>
+      </div>
+
+      <button type="submit">Send Message</button>
     </form>
+  </div>
 
 </section>
 
@@ -90,6 +106,6 @@
 
 
 
-<script src="contact.js"> </script>
+<script src="contact.js"></script>
 
 </body>
